<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/store_main_them">


    <ImageView
        android:id="@+id/backgroundStore"
        android:layout_width="430dp"
        android:layout_height="205dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/rectangle_13" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/dm_sans"
        android:text="@string/location"
        android:textColor="@color/sub_gray"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:fontFamily="@font/dm_sans"
        android:text="@string/locationExample"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />


    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView5"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="@+id/textView5"
        app:srcCompat="@drawable/humbleicons_chevron_right" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="366dp"
        android:layout_height="36dp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        app:srcCompat="@drawable/rectangle_17" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView5"
        app:layout_constraintStart_toStartOf="@+id/imageView5"
        app:layout_constraintTop_toTopOf="@+id/imageView5"
        app:srcCompat="@drawable/vector" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="0dp"
        android:layout_height="37dp"
        android:background="#10000000"
        app:layout_constraintBottom_toBottomOf="@+id/imageView5"
        app:layout_constraintEnd_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toTopOf="@+id/imageView5"
        android:onClick="searchCoffee"
        app:srcCompat="@drawable/rectangle_18__1_" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/imageButton"
        app:layout_constraintEnd_toEndOf="@+id/imageButton"
        app:layout_constraintStart_toStartOf="@+id/imageButton"
        app:layout_constraintTop_toTopOf="@+id/imageButton"
        app:srcCompat="@drawable/vector__1_" />

    <EditText
        android:id="@+id/coffeeSearch"
        android:layout_width="209dp"
        android:layout_height="45dp"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="-3dp"
        android:fontFamily="@font/dm_sans"
        android:hint="@string/search_coffee"
        android:textColor="@color/white"
        android:textColorHint="@color/search_hint"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView5"
        app:layout_constraintStart_toEndOf="@+id/imageView3" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backgroundStore"
        app:srcCompat="@drawable/group_1" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        app:srcCompat="@drawable/promo" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="@+id/imageView9"
        app:layout_constraintTop_toTopOf="@+id/imageView9"
        app:srcCompat="@drawable/rectangle_23" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/dm_sans_bold"
        android:text="@string/promo"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView10"
        app:layout_constraintEnd_toEndOf="@+id/imageView10"
        app:layout_constraintStart_toStartOf="@+id/imageView10"
        app:layout_constraintTop_toTopOf="@+id/imageView10" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/dm_sans_medium"
        android:text="@string/buy_one_get"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="@+id/imageView9"
        app:layout_constraintTop_toBottomOf="@+id/imageView10" />

    <ImageButton
        android:id="@+id/coffeeType_button0"
        android:onClick="coffeeTypeSelect0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@android:color/transparent"
        app:layout_constraintStart_toStartOf="@+id/imageView8"
        app:layout_constraintTop_toBottomOf="@+id/imageView9"
        app:srcCompat="@drawable/unpressed_choose_coffe_btn" />

    <ImageButton
        android:id="@+id/coffeeType_button1"
        android:onClick="coffeeTypeSelect1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toStartOf="@+id/coffeeType_button2"
        app:layout_constraintStart_toEndOf="@+id/coffeeType_button0"
        app:layout_constraintTop_toBottomOf="@+id/imageView9"
        app:srcCompat="@drawable/unpressed_choose_coffe_btn" />

    <ImageButton
        android:id="@+id/coffeeType_button2"
        android:onClick="coffeeTypeSelect2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="@+id/imageView8"
        app:layout_constraintTop_toBottomOf="@+id/imageView9"
        app:srcCompat="@drawable/unpressed_choose_coffe_btn"

        />

    <TextView
        android:id="@+id/coffeeType_Text0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cappucino"
        android:textSize="14sp"
        android:fontFamily="@font/dm_sans_bold"
        android:textColor="@color/unpressed_button_coffee_type"
        app:layout_constraintBottom_toBottomOf="@+id/coffeeType_button0"
        app:layout_constraintEnd_toEndOf="@+id/coffeeType_button0"
        app:layout_constraintStart_toStartOf="@+id/coffeeType_button0"
        app:layout_constraintTop_toTopOf="@+id/coffeeType_button0" />

    <TextView
        android:id="@+id/coffeeType_Text1"
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:fontFamily="@font/dm_sans_bold"
        android:text="@string/machiato"
        android:textColor="@color/unpressed_button_coffee_type"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/coffeeType_button1"
        app:layout_constraintEnd_toEndOf="@+id/coffeeType_button1"
        app:layout_constraintStart_toStartOf="@+id/coffeeType_button1"
        app:layout_constraintTop_toTopOf="@+id/coffeeType_button1" />

    <TextView
        android:id="@+id/coffeeType_Text2"
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:fontFamily="@font/dm_sans_bold"
        android:text="@string/latte"
        android:textColor="@color/unpressed_button_coffee_type"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/coffeeType_button2"
        app:layout_constraintEnd_toEndOf="@+id/coffeeType_button2"
        app:layout_constraintStart_toStartOf="@+id/coffeeType_button2"
        app:layout_constraintTop_toTopOf="@+id/coffeeType_button2" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/coffeeRecycler"
        android:layout_width="259dp"
        android:layout_height="394dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="@+id/imageView8"
        app:layout_constraintStart_toStartOf="@+id/imageView8"
        app:layout_constraintTop_toBottomOf="@+id/coffeeType_button1" />




</androidx.constraintlayout.widget.ConstraintLayout>